tests/parser/valid/expressions/increment_addition.src
fn test() {
    int y = 5;
    int x = y+++5; 
    return x;
}
