tests/parser/invalid/syntax_errors/missing_paren.src
fn test(int a, int b {
    return a + b;
}
